--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         <section id="contact" class="contact">
             <h2>Contact Me</h2>
             <p>If you would like to collaborate or just want to say hello, feel free to reach out!</p>
-            <a href="mailto:zeeshanhaiderrajpoot@gmail.com" class="btn">Send Email</a>
+            <a href="mailto:zeeshan@example.com" class="btn">Send Email</a>
         </section>
     </main>
 
