--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <h2>Education</h2>
             <div class="education-container">
                 <div class="education-item">
-                    <h3>High School Diploma</h3>
+                    <h3>High School</h3>
                     <p>Completed high school with a focus on mathematics and computer science.</p>
                     <span class="education-year">Year of Completion: 2020</span>
                 </div>
